--- a/src/Tesexam/appsettings.json
+++ b/src/Tesexam/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Tesexam-8aa20a2e-29e9-49b2-b422-767bd5a0ae58;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TesexamConnectionString": "mongodb://localhost:27017",
+    "TesexamDB": "tesexamdb"
   },
   "Logging": {
     "IncludeScopes": false,
