--- a/src/Tesexam/package.json
+++ b/src/Tesexam/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "asp.net",
-  "version": "0.0.0",
+  "name": "tesexam",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
