--- a/src/Tesexam/project.json
+++ b/src/Tesexam/project.json
@@ -2,8 +2,10 @@
   "userSecretsId": "aspnet-Tesexam-8aa20a2e-29e9-49b2-b422-767bd5a0ae58",
 
   "dependencies": {
+    "BundlerMinifier.Core": "2.1.258",
     "Data": "1.0.0-*",
     "Hub": "1.0.0-*",
+    "HubTests": "1.0.0-*",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
@@ -34,7 +36,6 @@
   },
 
   "tools": {
-    "BundlerMinifier.Core": "2.0.238",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
     "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final",
